fixer-upper - John Yosas

--- a/index.html
+++ b/index.html
@@ -63,13 +63,253 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!--<script src="http://Learning-Fuze.github.io/calculator/calculator.js"></script>-->
-    <script src="script.js"></script>
+    <script>
+        $(document).ready(function(){
+            console.log('page loaded and ready');
+            $('button').click(button_clicked);
+        });
+        //placeholder for index
+        var index = 0;
+        //placeholder for array to be calculated
+        var inputs_array = [{
+            type: undefined,
+            value: ''
+        }];
+        //placeholder for last input, should be equal sign
+        var last_input = null;
+
+        function button_clicked(){
+            //assigning value of clicked element to variable for argument use in functions
+            var clicked_value = $(this).text();
+            switch(clicked_value){
+                case 'C':
+                    console.log('clear all clicked');
+                    delete_all();
+                    break;
+                case 'CE':
+                    console.log('clear last entry');
+                    delete_one();
+                    break;
+                case '=':
+                    console.log('equal button hit');
+                    equate();
+                    break;
+                default:
+                    add_item(clicked_value);
+            }
+        }
+
+        function add_item(string_value) {
+            if(string_value === '+'){
+                index++;
+                new_obj();
+
+                add_operator('+');
+            }
+            //convert string value to number if not operator
+            if (isNaN(parseFloat(string_value)) && string_value !== '.') {
+                add_operator(string_value);
+            } else  {
+                //exit out of function if 2 '.' are entered in a row
+                if (string_value === '.' && (inputs_array[index].value.indexOf('.') !== -1)) {
+                    return;
+                }
+                //update type and value of new array item and display to output area
+                inputs_array[index].type = 'number';
+                inputs_array[index].value += string_value;
+                display(inputs_array[index]);
+            }
+        }
+
+        function add_operator(string_value){
+            //LFZ START
+            // if number is clicked update index to new value and add index for next operator
+
+                //increase index of main array
+
+                //prepare new index with '' and updates main array
+
+                //assign empty string to clicked value
+
+                //adding in operator if not equal sign with if statement
+
+                        //if empty string index isnt a number add as operator
+
+                        //display new clicked operator
+
+                        //increase index for next upcoming click
+
+                        //prepare new index with '' and updates main array
+
+
+                //changing operator if one was input on the previous click
+
+                //changes newly clicked operator into new clicked value
+
+                //display new operator to output div
+
+                //log that operator has been changed from its original value
+
+
+            //LFZ END
+        }
+
+        function equate() {
+            if (inputs_array[index].value === '=' || inputs_array[index] === '1') {
+                console.log('equal button hit again.');
+                display(order_of_operation(string_to_float(last_input)));
+                index++;
+                new_obj();
+                last_input = inputs_array.slice(index - 2);
+                if (inputs_array[index - 1].value === '=') {
+                    last_input[1].value = '+';
+                    last_input[2].value = 1;
+                }
+            } else {
+                last_input = inputs_array.slice(index - 2);
+                display(order_of_operation(string_to_float(inputs_array)));
+                index--;
+                new_obj();
+                inputs_array[index].value = '=';
+            }
+        }
+
+        //return result of operation based on operator sign
+        function do_math(num1, num2, operator){
+            var result = null;
+            switch(operator){
+                case 'x':
+                    if(num2 === undefined){
+                        num2 = num1;
+                    }
+                    result = num1 * num2;
+                    return result;
+                    break;
+                case '/':
+                    if(num2 == 0){
+                        return 'error';
+                    }else{
+                        result = num1 / num2;
+                    }
+                    return result;
+                    break;
+                case '+':
+                    result = num1 + num2;
+                    return result;
+                    break;
+                case '-':
+                    result = num1 - num2;
+                    return result;
+                    break;
+            }
+        }
+
+        //reset all globals and prep obj
+        function delete_all(){
+            var clear_all = {type: 'C'};
+            inputs_array = [];
+            index = 0;
+            new_obj();
+            display(clear_all);
+        }
+
+        //delete current entry
+        function delete_one(){
+            if(inputs_array[index].type === 'number'){//clear out current number entered
+                inputs_array[index].value = '';
+                display(inputs_array[index]);
+            }
+        }
+
+        //creates new obj in the current array index
+        //prep value property with empty for concatenating number
+        function new_obj(){
+            inputs_array[index] = {};
+            inputs_array[index].value = '';
+        }
+
+        //Loops through array of objects looking for type 'number' and converting to floats
+        function string_to_float(array){
+            for(var i = 0; i < array.length; i++){
+                if(array[i].type === 'number'){
+                    array[i].value = parseFloat(array[i].value);
+                }
+            }
+            return array;
+        }
+
+        function display(obj){
+            switch(obj.type){
+                case 'C':
+                    $("#output").text('');
+                    break;
+                case 'number':
+                case 'operator':
+                    $("#output").text(obj.value);
+                    break;
+            }
+        }
+
+        //looks for x and / first then + and - and returns result after entire array has been calculated
+        function order_of_operation(array) {
+            //LFZ START
+            //set variable to keep track of result of do_math
+
+            //create loop to go through main array
+
+            //search for  multiplication and division first
+
+            //grab num1, num2, and operator for do_math function
+
+            //check if any number is * or / by 0
+
+            //change error message to return as 0
+
+            //exit function and return main array as 0
+
+
+            //set previous first number to 0 for easy addition/subtraction
+
+            //set previous operator from '*' or '/' to '+'
+
+            //set 2nd number in first operation to the result of operation
+
+            //doing this will change a problem like 3 * 3 to 0 + 9
+
+
+            //log that all multiplication and division have been solved, show new array and can move onto addition and subtraction
+
+
+            //create loop to keep doing math until there is not longer 3 items in the main array
+
+                //create new array to take an array and separate first 3 array items to do math
+
+                //change index 0 of new array to whatever is the outcome of the math being done. example: [3 + 2] changes to [5]
+
+                //add new single value to main array(inputs_array)
+
+
+            //log that addition and subtraction have been completed and show new array
+
+            //find if single array item has decimals involved
+
+                //change decimal spot to change to 10 behind the decimal
+
+            //reset place index after shortening of array ---- ignore
+            /*index = array.length-1;*/
+            //return main array to order of ops function
+
+            //LFZ END
+        }
+    </script>
 </head>
 <body>
 
 <div id="structure">
-    <div id="output">
+    <div id="display">
+        <div id="output">
 
+        </div>
     </div>
 
     <div id='clear_buttons_area' class="btn-group" role="group" aria-label="...">
@@ -78,25 +318,25 @@
     </div>
 
     <div id="operator_buttons_area" class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-default operator_button">/</button>
-        <button type="button" class="btn btn-default operator_button">*</button>
-        <button type="button" class="btn btn-default operator_button">-</button>
-        <button type="button" class="btn btn-default operator_button">+</button>
+        <button class="btn btn-default operator_button">/</button>
+        <button class="btn btn-default operator_button">x</button>
+        <button class="btn btn-default operator_button">-</button>
+        <button class="btn btn-default operator_button">+</button>
     </div>
 
     <div id="numbers_buttons_area" class="btn-group" role="group" aria-label="...">
-        <button type="button" value="7" class="btn btn-default number_button">7</button>
-        <button type="button" value="8" class="btn btn-default number_button">8</button>
-        <button type="button" value="9" class="btn btn-default number_button">9</button>
-        <button type="button" value="4" class="btn btn-default number_button">4</button>
-        <button type="button" value="5" class="btn btn-default number_button">5</button>
-        <button type="button" value="6" class="btn btn-default number_button">6</button>
-        <button type="button" value="1" class="btn btn-default number_button">1</button>
-        <button type="button" value="2" class="btn btn-default number_button">2</button>
-        <button type="button" value="3" class="btn btn-default number_button">3</button>
-        <button type="button" value="0" class="btn btn-default number_button">0</button>
-        <button type="button" value="." class="btn btn-default decimal_button">.</button>
-        <button type="button" value="=" class="btn btn-default equate_button">=</button>
+        <button class="btn btn-default number_button">7</button>
+        <button class="btn btn-default number_button">8</button>
+        <button class="btn btn-default number_button">9</button>
+        <button class="btn btn-default number_button">4</button>
+        <button class="btn btn-default number_button">5</button>
+        <button class="btn btn-default number_button">6</button>
+        <button class="btn btn-default number_button">1</button>
+        <button class="btn btn-default number_button">2</button>
+        <button class="btn btn-default number_button">3</button>
+        <button class="btn btn-default number_button">0</button>
+        <button class="btn btn-default decimal_button">.</button>
+        <button class="btn btn-default equate_button">=</button>
     </div>
 
 </div>
