--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Calculator</title>
+    <title>John's Calculator</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <style>
+
+        /*-----------Used Bootstrap but also a little CSS to place and color elements------------*/
         #structure {
             border: 5px solid darkslategray;
             width: 475px;
-
+            margin: auto;
+            background-color: lightblue;
         }
         #output {
             height: 15vh;
             width: 90%;
             margin: 5% auto;
-            font-size: xx-large;
+            font-size: 6.0em;
             text-align: right;
-            padding: 2px;
             border: 1px solid steelblue;
         }
         #clear_buttons_area {
             margin-left: 2%;
+            width: 70%;
         }
 
         #clear_single, #clear_all {
             height: 90px;
-            width: 150px;
+            width: 50%;
             background-color: slategray;
         }
 
         #numbers_buttons_area {
-            width: 322px;
+            width: 70%;
             margin-left: 2.5%;
             margin-bottom: 10px;
         }
 
         .number_button, .decimal_button, .equate_button {
             height: 85px;
-            width: 100px;
-            background-color: royalblue;
+            width: 32%;
+            background-color: deeppink;
             margin: 2px;
+            font-size: 5vh;
         }
 
         #operator_buttons_area {
-            width: 120px;
+            width: 25%;
             float: right;
             margin-right: 10px;
         }
@@ -49,37 +55,34 @@
         .operator_button {
             width: 120px;
             height: 109px;
-            font-size: 10vh;
-        }
-
-
-        @media only screen and (max-width: 500px) {
-            #structure {
-                width: 100%;
-            }
+            font-size: 5vh;
         }
 
     </style>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!--<script src="http://Learning-Fuze.github.io/calculator/calculator.js"></script>-->
+
+    <!-----------Used Javascript in script tags, can do external as well---------->
     <script>
+        /*--------Click handlers ready for functionality and sound effect--------*/
         $(document).ready(function(){
             console.log('page loaded and ready');
             $('button').click(button_clicked);
+            $('.btn').click(audio_on);
         });
-        //placeholder for index
+
+        function audio_on(){
+            $('.sound').trigger('play');
+        }
+
+        /*-----Globals to help me keep track of the state that the application is in-----*/
         var index = 0;
-        //placeholder for array to be calculated
         var inputs_array = [{
             type: undefined,
             value: ''
         }];
-        //placeholder for last input, should be equal sign
         var last_input = null;
 
+        /*-----Directional switch statement that will direct key click to the proper function-----*/
         function button_clicked(){
-            //assigning value of clicked element to variable for argument use in functions
             var clicked_value = $(this).text();
             switch(clicked_value){
                 case 'C':
@@ -95,11 +98,12 @@
                     equate();
                     break;
                 default:
-                    add_item(clicked_value);
+                    add_number(clicked_value);
             }
         }
 
-        function add_item(string_value) {
+        /*---If 'C', 'CE', or '=' are not hit this will add a number to global array for later calculation---*/
+        function add_number(string_value) {
             //convert string value to number if not operator
             if (isNaN(parseFloat(string_value)) && string_value !== '.') {
                 add_operator(string_value);
@@ -115,6 +119,7 @@
             }
         }
 
+        /*----------This will add an operator to global array as long as it is not first value entered--------*/
         function add_operator(string_value){
             // if number is clicked update index to new value and add index for next operator
             if(inputs_array[index].type === 'number'){
@@ -123,7 +128,6 @@
                 inputs_array[index].value = string_value;
                 //adding in operator if not equal sign and add index for next number
                 if(string_value !== '='){
-                    debugger;
                     inputs_array[index].type = 'operator';
                     display(inputs_array[index]);
                     index++;
@@ -137,6 +141,7 @@
             }
         }
 
+        /*----------Runs when equal button is hit. Will redefine globals if necessary----------*/
         function equate() {
             if (inputs_array[index].value === '=' || inputs_array[index] === '1') {
                 console.log('equal button hit again.');
@@ -157,7 +162,7 @@
             }
         }
 
-        //return result of operation based on operator sign
+        /*-----Based on operators entered does the appropriate calculations, only based on two numbers------*/
         function do_math(num1, num2, operator){
             var result = null;
             switch(operator){
@@ -177,7 +182,6 @@
                     return result;
                     break;
                 case '+':
-                    debugger;
                     result = num1 + num2;
                     return result;
                     break;
@@ -188,7 +192,7 @@
             }
         }
 
-        //reset all globals and prep obj
+        /*----------Clears entire global array and display nothing in display area----------*/
         function delete_all(){
             var clear_all = {type: 'C'};
             inputs_array = [];
@@ -197,7 +201,7 @@
             display(clear_all);
         }
 
-        //delete current entry
+        /*---------------Clears single entry when CE is clicked on interface---------------*/
         function delete_one(){
             if(inputs_array[index].type === 'number'){//clear out current number entered
                 inputs_array[index].value = '';
@@ -205,14 +209,13 @@
             }
         }
 
-        //creates new obj in the current array index
-        //prep value property with empty for concatenating number
+        /*--------Creates new object in global array and preps it with an empty value--------*/
         function new_obj(){
             inputs_array[index] = {};
             inputs_array[index].value = '';
         }
 
-        //Loops through array of objects looking for type 'number' and converting to floats
+        /*In each object there is a value that is a string and a type, if the type is number, converts the string under value into a string*/
         function string_to_float(array){
             for(var i = 0; i < array.length; i++){
                 if(array[i].type === 'number'){
@@ -222,6 +225,7 @@
             return array;
         }
 
+        /*-----Displays the appropriate text inside the display field of calculator-----*/
         function display(obj){
             switch(obj.type){
                 case 'C':
@@ -234,7 +238,7 @@
             }
         }
 
-        //looks for x and / first then + and - and returns result after entire array has been calculated
+        /*-Searches for 'x' and '/' first to do that math then will come around again and do addition/subtraction-*/
         function order_of_operation(array){
             var result = null;
             //search for  multi and division first
@@ -275,10 +279,11 @@
 </head>
 <body>
 
+<audio class="sound" src="sounds/keypress.mp3"></audio>
+
 <div id="structure">
     <div id="display">
         <div id="output">
-
         </div>
     </div>
 
@@ -308,9 +313,6 @@
         <button class="btn btn-default decimal_button">.</button>
         <button class="btn btn-default equate_button">=</button>
     </div>
-
 </div>
-
 </body>
-
 </html>
