--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             font-size: 5.0em;
             text-align: right;
             border: 1px solid steelblue;
+            background-color: white;
         }
         #clear_buttons_area {
             margin-left: 2%;
