Javascript located in index.html

--- a/index.html
+++ b/index.html
@@ -255,7 +255,6 @@
                     array[i + 1].value = result;
                 }
             }
-
             while(array.length > 2){
                 //breaks down long equation and does it piece by piece
                 let add_and_subtract = array.splice(0,3);
@@ -278,6 +277,7 @@
 <audio class="sound" src="sounds/keypress.mp3"></audio>
 
 <div id="structure">
+    <!----------Used minimal HTML elements---------->
     <div id="display">
         <div id="output">
         </div>
